$Id: History,v 1.23 2000-10-05 12:57:55 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Sub-Category History file
                      -------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 05,   00   V. Grichine               geom-solids-csg-V02-00-03
- G4Cons.cc:
  o fix in DistanceToIn(p,v): corrected condition on conical surface to
    consider a real projection of the conical surface thickness on XY
    plane (0.5*kCarTolerance*secRMin instead of 0.5*kCarTolerance), when
    dealing with cons with large opening angle.
  o Updated unit test testG4Cons2.cc.

Aug 16,   00   V. Grichine		 geom-solids-csg-V02-00-02
- G4Cons.cc:
  o fix in constructor to check if one of the Rmin is equal to 0,
    if so, it will be set to 1e3*kRadTolerance.
  o Deactivated call to G4Exception in DistanceToOut(p) if p is outside,
    replaced by simple warning.
- G4Tubes.cc, G4Box.cc:
  o Deactivated call to G4Exception in DistanceToOut(p) if p is outside,
    replaced by simple warning.

Aug 08,   00   V. Grichine               geom-solids-csg-V02-00-01
- G4Cons.cc, G4Tubs.cc:
  o fixes to DistanceToOut(p,v,...) to make roots of quadratic equations
    more stable.
  o added check if point is outside in G4Tubes::DistanceToOut(p),
    some code formatting.
